css/site.styl
/**
 * Site specific CSS
 */

.mCSB_container
    margin-right 0px !important

html
    height 100%

body
    height 100%
    font-size 13px
    background-image url('../images/noisy_net.png')
    overflow auto
a
    -o-transition 0.5s
    -ms-transition 0.5s
    -moz-transition 0.5s
    -webkit-transition 0.5s
    transition 0.5s
    outline 0
div.readmore
    display none
.error
    background #FFC0C0
    color #900
    padding 0.5em
    margin-bottom 1em
header
    top 0px
    z-index 1000
    border-top 5px solid #12171b
    background-image url('../images/light_noise_diagonal.png')
    overflow visible
    -webkit-box-shadow:  0px 15px 30px 0px rgba(0, 0, 0, 0.5);
    box-shadow:  0px 15px 30px 0px rgba(0, 0, 0, 0.5);
    width 100%
    h2
        margin 0px
        margin-left 15px
        padding-right 17px
        line-height 35px
        background-image url('../images/divider.png')
        background-repeat repeat-y
        background-position top right
        display inline-block
        font-weight 900
        font-size 0.85em
        position relative
        ul
            border-left 5px solid #12171b
            position fixed
            display none
            z-index 3000
            top 35px
            background-image url('../images/light_noise_diagonal.png')
            padding-left 1em
            padding-right 1em
            list-style-type none
        a
            color #595f6a
            text-shadow 0px 1px 0px rgba(255, 255, 255, 0.5)
            font-family 'Roboto', sans-serif
            text-decoration none
        a:hover
            color #121212
        img
            vertical-align middle
            margin-right 0.5em
section#project
    margin-bottom 50px
    p.summary
        padding-bottom 1em
        border-bottom 1px dashed rgba(255, 255, 255, 0.15)
    img:first-of-type
        max-width 100%
        height auto
        max-height 100%
        margin 0px
    img.supplementary
        display block
        margin-left 3em
        margin-bottom 2em
        width 40em
        height auto
    h1
        color #fff
        margin-top 0.8em
        margin-left 1em
        font-size 3em
        font-family 'Roboto', sans-serif
        font-weight 300
    h2
        margin-left 2em
        margin-top 0px
        padding-top 0px
        color #8891A2
        width 33em
        font-family 'Roboto', sans-serif
        font-weight 300
        display inline-block
        width 26em
        margin-bottom 0em
        color #fff
        img
            display inline-block
            transition opacity 0.2s ease-in
            opacity 0.5
        img:hover
            opacity 1
        span
            float right
    p
        margin-left 3em
        width 40em
        margin-right 3em
        color #8891A2
        a
            text-decoration none
            font-size 1em
            background-color rgba(255, 255, 255, 0.1)
            padding 0.8em
            padding-top 0.5em
            padding-bottom 0.5em
            margin 1em
            margin-left 0px
            display inline-block
            -webkit-border-radius 15px
            border-radius 15px
            color #aaa
            opacity 0.5
            transition opacity 0.5s ease-in
        a:hover
            color #fff
            opacity 1
section#blurb
    background-image url('../images/light_noise_diagonal.png')
    z-index 100
    min-height 5px
    top 40px
    width 100%
    position fixed
section#browse
    margin-bottom 30px
    overflow hidden
    ul
        width 100%
        padding 0px
        margin 0px
        li
            cursor pointer
            color #8891A2
            position relative
            width 20%
            min-height 300px
            list-style-type none
            box-shadow 5px
            float left
            background-repeat no-repeat
            background-position top center
            background-size auto 300px
            padding-bottom 20px
            transition opacity 0.2s ease-in, transform 0.15s ease-in
            -webkit-transition opacity 0.2s ease-in, -webkit-transform 0.15s ease-in
            span
                display inline-block
                margin-top 320px
                margin-left 20px
        li:hover
            transform scale(0.95,0.95)
            -webkit-transform scale(0.95,0.95)
            opacity 1
section#brief
    color #8891A2
    color #A7B2C7
    margin-left 3em
    h1
        display block
        width 10em
        margin-bottom 0em
        color #fff
        font-size 3em
        font-family 'Roboto', sans-serif
        font-weight 300
    h2
        font-family 'Roboto', sans-serif
        font-weight 300
        display inline-block
        width 10em
        margin-bottom 0em
        color #fff
    p.summary
        padding-bottom 1em
        border-bottom 1px dashed rgba(255, 255, 255, 0.15)
    p
        width 40em
        a
            text-decoration none
            font-size 1em
            background-color rgba(255, 255, 255, 0.1)
            padding 0.8em
            padding-top 0.5em
            padding-bottom 0.5em
            margin 1em
            margin-left 0px
            display inline-block
            -webkit-border-radius 15px
            border-radius 15px
            color #eee
            opacity 0.5
            transition opacity 0.5s ease-in
        a:hover
            color #fff
            opacity 1
section#main.hero-image
    height 360px
    background-size cover
    -webkit-background-size cover
    -o-background-size cover
    -moz-background-size cover
    background-repeat no-repeat
    background-position center center
    background-attachment fixed
section#main
    text-align center
    height 100%
    min-height 100%
    margin 0px
    overflow hidden
    padding-top 40px
    z-index 100
    h1,h2
        color #fff
        font-family 'Roboto', sans-serif
        font-weight 900
        font-weight 300
        font-size 3.8em
        margin-top 0.8em
        margin-bottom 1.4em
        margin-left 0.8em
    h2
        font-size 3em
        margin-bottom 0em
    h1
        margin-top 0em
    p
        font-family 'Roboto', sans-serif
        font-weight 700
        font-size 1.52em
        color #121212
        text-shadow 0px 1px 0px rgba(255, 255, 255, 0.2)
        margin-left 2em
        text-transform lowercase
    ol
        list-style-type none
        li
            vertical-align top
            width 300px
            display inline-block
            a
                text-shadow 0px 1px 0px rgba(255, 255, 255, 0.2)
                text-decoration none
                color #bbb
                font-size 1em
                font-family 'Roboto', sans-serif
                span
                    display block
                span:first-child
                    font-weight bold
            a:hover
                color #fff
section#submit
    background-image url('../images/light_noise_diagonal.png')
    padding 2em
    overflow hidden
    p
        clear both
    label
        width 9em
        display inline-block
        float left
        clear left
        line-height 2em
    input,select,textarea
        background-color #fff
        border 0px
        -webkit-border-radius 15px
        border-radius 15px
        padding 0.5em
        margin-bottom 1em
        float left
    textarea
        width 30em
        height 10em
    span
        line-height 2em
        color #444
        font-style italic
        margin-left 3em
        float left
    input[type="submit"]
        clear both
        background-color #888
        color #fff
section#details
    background-image url('../images/light_noise_diagonal.png')
    display none
    overflow hidden
    padding-bottom 80px
    margin-top 3em
    text-align center
    .arrow
        position absolute
        margin-top -28px
        margin-left 50%
        left 300px
    article:nth-child(odd)
        text-align right
        ul
            margin-right 3.04em
            li
                padding-left 0px
            li:nth-child(2)
                padding-top 24em
    article
        text-align left
        padding-top 3em
        /*color #8891A2*/
        color #333
        float left
        width 50%
        a.button
            text-decoration none
            font-size 1em
            background-color rgba(0, 0, 0, 0.2)
            padding 0.8em
            padding-top 0.5em
            padding-bottom 0.5em
            margin 0em
            margin-bottom 1em
            display inline-block
            -webkit-border-radius 15px
            border-radius 15px
            color #333
            opacity 0.5
            transition opacity 0.5s ease-in
        a.button:hover
            color #111
            opacity 1
        h2
            font-family 'Roboto', sans-serif
            text-shadow 0px -1px 0px rgba(0, 0, 0, 0.5)
            text-transform uppercase
            background-image url('../images/logos/analogue_small.png')
            background-position center left
            line-height 128px
            background-repeat no-repeat
            padding-left 128px
            font-size 2em
            margin-left 1.513em
            margin-top 1.013em
            font-weight 100
            a
                color #eee
        h3
            color #eee
            text-shadow 0px -1px 0px rgba(0, 0, 0, 0.5)
            font-weight 100
            margin-top 1.013em
            font-size 2em
            margin-left 1.013em
            padding-right 1.013em
            font-family 'Roboto', sans-serif
            line-height 128px
            text-transform uppercase
        p
            margin-left 3.04em
        ul
            padding 0px
            list-style-type none
            margin-left 3.04em
            li
                padding-left 100px
                padding-right 1.013em
                line-height 2em
                span
                    font-weight bold
                    position absolute
                    margin-left -100px
                    padding-left 25px
                    background-repeat no-repeat
                    background-position center left
                span.where
                    background-image url('../images/icons/location.png')
                span.when
                    background-image url('../images/icons/calendar.png')
                span.why
                    background-image url('../images/icons/question_mark.png')
                span.catalogue
                    background-image url('../images/icons/catalogue.png')
footer
    position fixed
    bottom 0px
    width 100%
    background-color #121212
    text-align center
    ul
        list-style-type none
        margin 0px
        li
            display inline-block
            margin-right 20px
            margin-left 20px
            line-height 30px
            a
                color #595f6a
                text-decoration none
                font-size 0.8em
            a:hover
                color #aaa

